# polymarket_holder_edge_bot

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260313_0001_initial_schema.py
app/: __init__.py  cli.py
app/api/: main.py
app/clients/: __init__.py
app/config/: __init__.py  settings.py
app/db/: base.py  session.py
app/domain/: __init__.py
app/jobs/: __init__.py
app/models/: __init__.py  enums.py  market.py  signal.py  wallet.py
app/repositories/: __init__.py
app/services/: __init__.py
app/utils/: logging.py
tests/: __init__.py  test_cli.py  test_models.py  test_settings.py
