[project]
name = "polymarket-holder-edge-bot"
version = "0.1.0"
description = "Research MVP for scoring Polymarket markets by participant quality asymmetry."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "psycopg[binary]>=3.2.6",
    "sqlalchemy>=2.0.39",
    "structlog>=25.2.0",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
]

[project.scripts]
pmhe = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
